# NaoBody

./: .gitignore  LICENSE  README.md  make-desktop.sh  make-robot.sh
.github/workflows/: body.yml  docker-image.yml
.qi/: qibuild.xml  worktree.xml
body/: CMakeLists.txt  conanfile.txt  main.cpp  qiproject.xml  test.cpp
